# Invisible-insight

Invisibleinsight/: gradle.properties  local.properties  settings.gradle.kts
Invisibleinsight/app/: build.gradle.kts
Invisibleinsight/app/release/: output-metadata.json
Invisibleinsight/app/release/baselineProfiles/0/: app-release.dm
Invisibleinsight/app/release/baselineProfiles/1/: app-release.dm
Invisibleinsight/app/src/androidTest/java/com/example/invisibleinsight/: ExampleInstrumentedTest.kt
Invisibleinsight/app/src/main/: AndroidManifest.xml
Invisibleinsight/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Invisibleinsight/app/src/main/java/com/example/invisibleinsight/: GameView.kt  HomeScreenActivity.kt  InputController.kt  KnowledgeBase.kt  LightningView.kt  LlamaCpp.kt  MainActivity.kt  MapPreviewView.kt  Maze.kt  NetworkManager.kt  Player.kt  SettingsActivity.kt  VoiceChatManager.kt
Invisibleinsight/app/src/main/java/com/example/invisibleinsight/ui/theme/: Color.kt  Theme.kt  Type.kt
Invisibleinsight/app/src/main/res/drawable/: glow_red.xml  halo_green.xml  particle_green.xml
Invisibleinsight/app/src/main/res/layout/: activity_home_screen.xml  activity_settings.xml  item_level_card.xml
Invisibleinsight/app/src/main/res/values/: strings.xml  themes.xml
Invisibleinsight/app/src/test/java/com/example/invisibleinsight/: ExampleUnitTest.kt
Invisibleinsight/gradle/: libs.versions.toml
Invisibleinsight/gradle/wrapper/: gradle-wrapper.properties
